--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,36 @@
 @import url(./reset.css);
+:root{
+    --raisin-black: #2b2a33ff;
+    --onyx: #42414dff;
+    --white-smoke: #f1f0f0ff;
+}
+
+header h1{
+    background-color: var(--onyx);
+    color: var(--white-smoke);
+    text-align: center;
+    line-height: 7.8rem;
+    font-weight: normal;
+}
+
+figure{
+    max-width: 100rem;
+    margin: 5rem auto;
+    border: solid .1rem transparent;
+    background-color: var(--onyx);
+    padding: 1rem;
+    border-radius: .8rem;
+}
+
+figure figcaption{
+    text-align: center;
+}
+
+figure caption h2{
+    font-weight: normal;
+    line-height: 5rem;
+}
+
+footer *{
+    text-align: center;
+}
